# cmake-dia-convert

./: CMakeLists.txt  DiaConvert.cmake  README.rst
test/: CMakeLists.txt  png.cmake  simple.dia
